[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entities/Map/full_test.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/GameUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/World.gd" type="Script" id=3]

[sub_resource type="Environment" id=1]
glow_enabled = true
glow_bloom = 0.1
glow_blend_mode = 1
glow_bicubic_upscale = true
glow_high_quality = true

[node name="World" type="Spatial"]
script = ExtResource( 3 )

[node name="Static" type="Spatial" parent="."]

[node name="full_test" parent="Static" instance=ExtResource( 1 )]

[node name="Players" type="Spatial" parent="."]

[node name="SpawnPoints" type="Spatial" parent="."]

[node name="0" type="Spatial" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.62975, -63.9535 )

[node name="1" type="Spatial" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 62.9575 )

[node name="2" type="Spatial" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -87.346, 0, 0 )

[node name="3" type="Spatial" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -38.0748, -11.4496 )

[node name="4" type="Spatial" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10.9948, -62.6127 )

[node name="5" type="Spatial" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -51.4921, -20.5063, 54.7496 )

[node name="6" type="Spatial" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -71.0088, -3.51379, -50.9316 )

[node name="7" type="Spatial" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25.5893, -7.93429, -62.4865 )

[node name="8" type="Spatial" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.596737, 14.09, -80.1888 )

[node name="9" type="Spatial" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 68.6353, 3.20533, 43.9469 )

[node name="10" type="Spatial" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.5488, 10.7194, 77.9697 )

[node name="GameUI" parent="." instance=ExtResource( 2 )]

[node name="OmniLight" type="OmniLight" parent="."]
shadow_enabled = true
shadow_bias = 1.0
shadow_reverse_cull_face = true
omni_range = 200.0
omni_attenuation = 4.0
omni_shadow_mode = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="PostRoundTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="RoundTimer" type="Timer" parent="."]
wait_time = 300.0
autostart = true

[connection signal="timeout" from="PostRoundTimer" to="." method="_on_PostRoundTimer_timeout"]
[connection signal="timeout" from="RoundTimer" to="." method="end_round"]
